plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
    id 'org.jetbrains.kotlin.plugin.spring' version '2.2.21'
    id 'org.jetbrains.kotlin.plugin.jpa' version '2.2.21'
    id 'org.jetbrains.kotlin.plugin.lombok' version '2.2.21'
}

group = 'com.blink'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.bundles.spring.starter
    implementation libs.postgresql
    compileOnly libs.lombok
    annotationProcessor libs.lombok
    testImplementation libs.springboot.starter.test
    implementation "org.jetbrains.kotlin:kotlin-reflect"
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    implementation("org.apache.httpcomponents.client5:httpclient5")
}

tasks.named('test') {
    useJUnitPlatform()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}